frontend/test/should_pass/conn_001.grg
using conn_model_001;
