frontend/test/should_fail/attrib_092.grg
using attrib_model_092;
